--- a/integrations/microsoft-teams.mdx
+++ b/integrations/microsoft-teams.mdx
@@ -16,7 +16,7 @@ The Microsoft Teams integration allows you to receive test run notifications dir
       <img src="/images/workflow-teams-example.png" alt="Microsoft Teams channel menu showing the Workflows option" />
     </Frame>
 
-    Select the **"Post to a channel when a webhook request is received"** template. This creates a workflow that posts messages to your channel when it receives a webhook request.
+    Select the **"Send webhook alerts to a channel"** template. This creates a workflow that posts messages to your channel when it receives a webhook request.
 
     Once the workflow is created, you'll see a dialog with a webhook URL. Copy this URL - you'll need it for the next step.
 
@@ -25,7 +25,7 @@ The Microsoft Teams integration allows you to receive test run notifications dir
     </Tip>
 
     <Note>
-      If the **Workflows** option is not available in your channel menu, you can also create the webhook workflow from the Microsoft 365 Workflows settings. Access Workflows through the Microsoft 365 app or at [workflows.microsoft.com](https://workflows.microsoft.com), then create a new workflow using the **"Post to a channel when a webhook request is received"** template.
+      If the **Workflows** option is not available in your channel menu, you can also create the webhook workflow from the [Workflows app in Microsoft Teams](https://support.microsoft.com/en-us/office/browse-and-add-workflows-in-microsoft-teams-4998095c-8b72-4b0e-984c-f2ad39e6ba9a). Search for the **"Send webhook alerts to a channel"** template and follow the setup steps.
     </Note>
 
   </Step>
