docs: update file upload docs to clarify any file type supported (CUS-282)
- Fix CSV custom config claim (use File Upload config instead)
- Fix default file names (test.pdf/test.jpg → cat.pdf/cat.jpg)
- Add explicit "any file type supported" statement
- Fix config labels to match code exactly
- Enhance custom file uploads documentation with step-by-step guide
- Rewrite drag-and-drop section to match actual Browser Engine behavior

Refs CUS-282

--- a/best-practices/handle-auth.mdx
+++ b/best-practices/handle-auth.mdx
@@ -76,7 +76,7 @@ For passwordless authentication via email links:
 3. The AI automatically waits for the email, extracts the login link, and navigates to it
 
 <Tip>
-Create a test user account in your application using the magic link email address shown in your project's [**Magic Link Login** config](/core-concepts/configs) before running tests.
+Create a test user account in your application using the magic link email address shown in your project's [**Email for Magic Link Login** config](/core-concepts/configs) before running tests.
 </Tip>
 
 ### Two-Factor Authentication (2FA)
