--- a/core-concepts/configs.mdx
+++ b/core-concepts/configs.mdx
@@ -38,19 +38,19 @@ Configs can be referenced in your test cases under the Settings » Configs secti
 
 QA.tech automatically provides several configs for common testing needs:
 
-1. **Single-use Test Email Address**
+1. **Single use Test Email Address**
 
    - Generates a unique email for each test session
    - Perfect for email verification flows
    - Includes access to email inbox
 
-2. **Magic Link Login Email**
+2. **Email for Magic Link Login**
 
    - Format: `magic-login-xxxxx@qatech.email`
    - Dedicated for magic link authentication flows
    - Includes inbox monitoring
 
-3. **Project Email Address**
+3. **Project e-mail address**
    - Format: `prj-xxxxx@qatech.email`
    - Project-specific email address
    - Permanent address for your project
@@ -79,12 +79,12 @@ QA.tech automatically provides several configs for common testing needs:
      </Note>
    </Accordion>
 
-2. **Username + Password with 2FA**
+2. **Username + Password Credentials - with Two-Factor Authentication**
 
    - For two-factor authentication flows
    - Includes 2FA setup (Google Authenticator/Authy)
 
-3. **Valid Email + Password Login**
+3. **Valid Email + Password Login Credentials**
 
    - Includes generated unique email
    - Password management
@@ -93,8 +93,4 @@ QA.tech automatically provides several configs for common testing needs:
 4. **File Upload**
    - Upload static files for testing
    - Maximum size: 250MB
-   - Supports common file formats
-
-## Custom Config Types
-
-Need a custom configuration type (CSV files, specific data formats, etc.)? Contact our support team for assistance in setting up specialized configs for your needs.
+   - Supports any file type (no MIME type or extension restrictions)
