docs: fix broken links and update API calls documentation
- Fix GitHub Actions link in running-tests.mdx
- Fix GitHub App link and update tool count in ai-chat-assistant.mdx
- Clarify Microsoft Teams limitations (no interactive features or API overrides)
- Update API calls docs: mark optional fields, add result viewer section, restructure setup

--- a/best-practices/running-tests.mdx
+++ b/best-practices/running-tests.mdx
@@ -34,7 +34,7 @@ You can also integrate test runs as part of your **CI pipeline**.
 
 You can use any system that supports sending an HTTPS POST request when you want to trigger the tests.
 
-For a great example, check out our [GitHub Actions documentation](/configuration/github).
+For a great example, check out our [GitHub Actions documentation](/configuration/github-actions).
 
 ## Trigger a Run on a Schedule
 
