--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -53,7 +53,7 @@ The assistant can show you what [configurations](/core-concepts/configs) are ava
 
 **GitHub Integration**
 
-It can fetch information about your [GitHub pull requests](/configuration/github) and write comprehensive test reviews directly on your PRs. When you ask it to test a pull request, it can run relevant tests against the [preview environment](/core-concepts/applications-and-environments#preview-environments) and provide detailed feedback on what was verified and what issues were found.
+It can fetch information about your [GitHub pull requests](/configuration/github-app) and write comprehensive test reviews directly on your PRs. When you ask it to test a pull request, it can run relevant tests against the [preview environment](/core-concepts/applications-and-environments#preview-environments) and provide detailed feedback on what was verified and what issues were found.
 
 **Help & Support**
 
@@ -79,10 +79,10 @@ Just describe what you want naturally - the system routes to the right specialis
 
 ## Available Tools Reference
 
-The AI Chat agent has access to 17 specialized tools organized into these categories:
+The AI Chat agent has access to 16 specialized tools organized into these categories:
 
 <Note>
-**Test Management:** get-test-cases, get-test-case-details, get-test-scenarios, get-test-plan-info, wait-for-run
+**Test Management:** get-test-cases, get-test-case-details, get-test-scenarios, get-test-plan-info
 
 **Application Analysis:** analyze-site, search-feature-graph, search-knowledge-base
 
