--- a/integrations/microsoft-teams.mdx
+++ b/integrations/microsoft-teams.mdx
@@ -4,7 +4,7 @@ description: "Receive QA.tech notifications in Microsoft Teams channels"
 icon: "microsoft"
 ---
 
-The Microsoft Teams integration sends automated test run notifications directly to your Teams channels using incoming webhooks. This is a notification-only integration - you'll receive alerts when test runs complete, but unlike the Slack Bot, this integration does not support interactive features or API overrides.
+The Microsoft Teams integration sends automated test run notifications directly to your Teams channels using incoming webhooks. This is a notification-only integration - you'll receive alerts when test runs complete. This integration does not support interactive features or API overrides.
 
 ## Setup
 
